--- a/docs/02_splitting.adoc
+++ b/docs/02_splitting.adoc
@@ -5,4 +5,4 @@
 * How to "split" one Observable in multiple
 * Based on the http://reactivex.io/documentation/operators/groupby.html[groupBy] operator
 * Everything runs synchronous in the same thread (main)
-* See also answer http://stackoverflow.com/questions/28854688/split-rx-observable-into-multiple-streams-and-process-individually
+* See also question http://stackoverflow.com/questions/28854688/split-rx-observable-into-multiple-streams-and-process-individually
