--- a/docs/01_index.adoc
+++ b/docs/01_index.adoc
@@ -2,7 +2,7 @@
 Peti Koch
 :imagesdir: ./images
 
-link:./02_splitting.adoc[Splitting Observables]
+link:./02_threading_and_parallelism.adoc[Handling Observables parallel in a logical and in a execution sense]
 
-link:./03_parallel.adoc[Handling Observables parallel]
+link:./03_splitting.adoc[Splitting Observables]
 
