--- a/docs/02_threading_and_parallelism.adoc
+++ b/docs/02_threading_and_parallelism.adoc
@@ -1,6 +1,6 @@
 == Handling Observables parallel (in a logical sense and in a execution sense)
 
-Probably you also had a difficult start concerning RxJava and threading like http://www.grahamlea.com/2014/07/rxjava-threading-examples.
+Probably you also had a difficult start concerning RxJava and threading like http://www.grahamlea.com/2014/07/rxjava-threading-examples[Graham Lea did].
 
 I had.
 
@@ -11,7 +11,7 @@ and b) _"While Rx has concurrency features, these should not be mistaken for a c
 One could sum this up to:
 
 Rx is created mainly for "clients" (client applications like apps, desktop gui applications, ...) where
-you have typically one thread from the GUI and you would like to - on e.g. a form submit - "spin off" several background tasks (in parallel),
+you have typically one thread from the GUI and you would like to on e.g. a form submit "spin off" several background tasks (in parallel),
 combine those asynchronously returning results to one result which you display in the GUI.
 
 It's not primarly made for "servers", e.g. to handle concurrent HTTP requests in a webserver. But you can use it to do implement "servers", if you know "how".
@@ -38,10 +38,10 @@ Currently, the http://reactivex.io/documentation/operators/flatmap.html[flatmap]
 link:../src/main/java/ch/petikoch/examples/rxjava/threading/TwoLaneMcDrive.java[]
 
 Same as OneLaneMcDrive, but now with two lanes. There are still few customers arriving concurrently. Each of the lane
-is either free or there is maximum one customer in the lane. Some we have at each time between 0 and 2 customers concurrently.
+is either free or there is maximum one customer in the lane. We have at each time between 0 and 2 customers concurrently.
 
 * Parallelism in a execution sense: We can handle two customers at the same time
-* Parallelism in a logical sense: Like OneLaneMcDrive
+* Parallelism in a logical sense: like OneLaneMcDrive
 
 There is also no need for backpressure, since the customers arrive "slow " and the McDrive can handle them in time.
 
@@ -52,7 +52,7 @@ link:../src/main/java/ch/petikoch/examples/rxjava/threading/JammedOneLaneMcDrive
 Same as OneLaneMcDrive, but now with more customers arriving. The McDrive can't handle all of them "just in time",
 so a wait line (queue) builds up. The longer the example runs, the longer the wait line becomes.
 
-We need some kind of backpressure. We choose buffering (queueing).
+We need some kind of backpressure: we choose buffering (queueing) and get a "jam".
 
 === InfiniteLaneMcDrive
 
@@ -61,6 +61,6 @@ link:../src/main/java/ch/petikoch/examples/rxjava/threading/InfiniteLaneMcDrive.
 Now, we have an "infinite" number of lanes. The number of lanes grows to the point when we have
 enough lanes to handle all the arriving customers "just in time".
 
-We output the numer of lanes / number of concurrently handled customers.
+We output the numer of lanes (=number of concurrently handled customers).
 
 
