--- a/docs/02_threading_and_parallelism.adoc
+++ b/docs/02_threading_and_parallelism.adoc
@@ -72,4 +72,15 @@ enough lanes to handle all the arriving customers "just in time".
 
 We output the numer of lanes (=number of concurrently handled customers).
 
+=== SingleThreadedByDefault
 
+link:../src/main/java/ch/petikoch/examples/rxjava/threading/SingleThreadedByDefault.java[]
+
+Let's come back from the food to the technical details. As initially said, RxJava is _"single threaded by default"_.
+Although you can offload the work from one thread to an other (using Schedulers), the program flow then is switching
+from one thread to another *one* thread and not to a pool of threads. Your sourcecode (e.g. your observer) is always called by
+only *one* and the *same* thread.
+
+So, to make it more clear _"your sourcecode is always called by the same single thread"_.
+
+Benefit? You don't have to implement thread-safe code, which is hard.
