--- a/docs/02_threading_and_parallelism.adoc
+++ b/docs/02_threading_and_parallelism.adoc
@@ -90,6 +90,8 @@ link:../src/main/java/ch/petikoch/examples/rxjava/threading/SingleThreadedByDefa
 Let's come back from the food to the technical details. As initially said, RxJava is _"single threaded by default"_.
 Although you can offload the work from one thread to an other (using Schedulers), the program flow then is switching
 from one thread to another *one* thread and not to a pool of threads. Your sourcecode (e.g. your observer) is always called by
-only *one* (and the *same*?) thread.
+only *one* (and usually the *same*) thread.
 
 Benefit? You don't have to implement thread-safe code, which is hard.
+
+Drawback? There might be a lot of threads just sitting around. Since a thread is currently (Java 8) a heavy resource, this is suboptimal. A possible solution: Rewrite RxJava to use fibers (lightweight threads).
